# ChangeLog for games-server/crossfire-server
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-server/crossfire-server/ChangeLog,v 1.12 2007/08/25 23:38:20 tupone Exp $

*crossfire-server-1.10.0 (25 Aug 2007)

  25 Aug 2007; Tupone Alfredo <tupone@gentoo.org>
  +crossfire-server-1.10.0.ebuild:
  Version bumped to 1.10.0. bug #179705 by Epicanis.
  Keyword ~amd64 added

  06 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  crossfire-server-1.9.0.ebuild:
  Remove old virtual/x11 dependency.

*crossfire-server-1.9.1 (16 Sep 2006)

  16 Sep 2006; <tupone@gentoo.org> +crossfire-server-1.9.1.ebuild:
  Version bumped. Bug #139574 by Eddward

  16 Apr 2006; Michael Hanselmann <hansmi@gentoo.org>
  crossfire-server-1.9.0.ebuild:
  Stable on ppc.

  28 Mar 2006; Michael Sterrett <mr_bones_@gentoo.org>
  crossfire-server-1.9.0.ebuild:
  stable for x86

*crossfire-server-1.9.0 (02 Mar 2006)

  02 Mar 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +crossfire-server-1.9.0.ebuild:
  version bump

  24 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  crossfire-server-1.6.0.ebuild, crossfire-server-1.8.0.ebuild:
  Added modular X dependencies and closing bug #120077.

*crossfire-server-1.8.0 (19 Oct 2005)

  19 Oct 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +crossfire-server-1.8.0.ebuild:
  version bump (bug #104626)

*crossfire-server-1.7.0 (26 Jul 2005)

  26 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +crossfire-server-1.7.0.ebuild:
  Version bumped to version 1.7.0 and closing bug #84120.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  crossfire-server-1.6.0.ebuild:
  virtual/glibc -> virtual/libc

*crossfire-server-1.6.0 (30 May 2004)

  30 May 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me for #36507 by Clemens Schwaighofer.