@@ -1,8 +1,11 @@
 DIST crossfire-1.10.0.maps.tar.gz 24070723 RMD160 e9c9fda298d9c14e33299bfb8ab493dee9c545bc SHA1 53be56d1f7bb8dc098f1bcee2396f881f715a4bb SHA256 4c7813e50588e65015dc5a0b6e9f915cfb89f86ad6bbf7c80fcf12831e4e8a23
 DIST crossfire-1.10.0.tar.gz 6061251 RMD160 63880d246c64b89230efb2ef9560d6f8cf4ee167 SHA1 0f5247abd27ba22450eecdcbcf755d9bd57d137b SHA256 feeaadcd016b6c760adf2a91adbb76d4c605bed93af8db05f416afdf53a8ba3e
+DIST crossfire-1.11.0.maps.tar.gz 24675542 RMD160 4defb41bed63c87d92840c9cc130041450dce078 SHA1 bd72ebe276a3c2f589c4505543ca4123b7caf575 SHA256 848dc10e292f0e4812f9ec4cd802375da8e18df7648d090942e484bbde94b08b
+DIST crossfire-1.11.0.tar.gz 6302656 RMD160 c71c429896ccfecc98b5f52559377bb01b33c1c0 SHA1 5ba3f6e8ac39f7d02cf2d133ed6069c789502c25 SHA256 ad259903d37ddecbfc69507f01e5bfcf5c3f847fd22e711b1cc7df2d47ad222c
 DIST crossfire-1.9.0.maps.tar.gz 4682531 RMD160 5f49bcbe357c98131d31bb278240c212a134aca7 SHA1 a0ce915d72cf0ff5ace45717e5f82207cfeee6eb SHA256 815a8106777e36cb9e7c5a4ed6b64072b3e6cfc8b90930d40715c79c3fd61c26
 DIST crossfire-1.9.0.tar.gz 5317109 RMD160 6069e1d566a738c73756096240694d8f62ab8ce4 SHA1 7f8ef84f4d465736fc854b4be4e32f39ed415eaf SHA256 c88887bbc3437032e79d4bc0304195418aa0837d24f22966ecd01857622299b7
 EBUILD crossfire-server-1.10.0.ebuild 1072 RMD160 38112e765b4839848557734745bb417e4ef20f8f SHA1 d8783ff63b714e3cf64351e1ea6a4f29d94a902b SHA256 186ea091e9a0b128df67b3943ff30e9a92493d603262ffafb831bafd73d44d49
+EBUILD crossfire-server-1.11.0.ebuild 1077 RMD160 553e732460abf1cca8e13bb2a1147c2cc4a74cb8 SHA1 b614ebb67fd65386843c5eaa5f115be4c916e2d6 SHA256 850a9ef16cb33b09c506cb758d98f7748b396fb188e6ad8a4fa8a45e93190763
 EBUILD crossfire-server-1.9.0.ebuild 1178 RMD160 4e4bdfa0ce0f6721ca74cf1d6cf3e5ff550b5512 SHA1 b630e88e5a458078c02a280a86baf0760b25d063 SHA256 d62a77fb730b5d8dc029a935360cb4b15b075ede7e11a5c59b355fa6a169f919
-MISC ChangeLog 1873 RMD160 daf460c349b6d12395c352a472b043f37885b940 SHA1 2bc0741eba2e3e3807530ceab75ad8438f8a529f SHA256 b7a0fc39e1cff436490ac8a4f5de21f6e76be1b85fa91c179c8df943f3011bfc
+MISC ChangeLog 2022 RMD160 65005699d5b5e4efe8863f2fc28b2b5ad93eb806 SHA1 eb5cb3bb45402c1fd8dc717233a3546d8f7d6a5b SHA256 8510d8ef58275646e59e2242f7722e1014a10255fdab6c340d9751b063b8efca
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
