@@ -1,6 +1,12 @@
 # ChangeLog for games-server/crossfire-server
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-server/crossfire-server/ChangeLog,v 1.12 2007/08/25 23:38:20 tupone Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-server/crossfire-server/ChangeLog,v 1.13 2008/02/11 01:44:50 mr_bones_ Exp $
+
+*crossfire-server-1.11.0 (11 Feb 2008)
+
+  11 Feb 2008; Michael Sterrett <mr_bones_@gentoo.org>
+  +crossfire-server-1.11.0.ebuild:
+  version bump
 
 *crossfire-server-1.10.0 (25 Aug 2007)
 
